--- a/data-engineer.html
+++ b/data-engineer.html
@@ -68,7 +68,7 @@
 <p><span class="badge badge-light">New York New York</span></p>
 <p>Posted on: 2019-07-29</p>
 <hr/>
-<h5><a href='https://docsapp.recruiterbox.com/jobs/fk03hd7/'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://docsapp.recruiterbox.com/jobs/fk03hd7/'>
     Data Engineer at DocsApp
 </a></h5> 
 <p><span class="badge badge-light">Bengaluru</span></p>
@@ -82,7 +82,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/daveramsey/job/ogMDafwz'>Ramsey Solutions Careers - Data Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/daveramsey/job/ogMDafwz'>Ramsey Solutions Careers - Data Engineer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
@@ -152,7 +152,7 @@ We're a data-first marketing platform startup, and we approach our work seriousl
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
-<h5><a href='https://depop.workable.com/jobs/1068561'>Data Engineer - Apply online - Depop - Jobs</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://depop.workable.com/jobs/1068561'>Data Engineer - Apply online - Depop - Jobs</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jul 20, 2019 ... Apply online for the job of Data Engineer at Depop.</p>
 <hr/>
@@ -204,7 +204,7 @@ Assemble large?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>3 days ago ... Apply online for the job of Data Engineer at Cloud Academy.</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://photoboxgroup.workable.com/jobs/1087076'>ETL Data Engineer - Apply online - Photobox Group - Jobs</a></h5> 
+<h5><a href='https://photoboxgroup.workable.com/jobs/1087076'>ETL Data Engineer - Apply online - Photobox Group - Jobs</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>1 day ago ... Apply online for the job of ETL Data Engineer at Photobox Group.</p>
 <hr/>
@@ -351,7 +351,7 @@ created Data Management Excellence Team. Within this multidisciplinary team?...<
 <p><span class="badge badge-light">Cape Town Cape Town South Africa</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/ancestry/7b248d7f-5f6c-4558-8368-18c14b2eebde'>Ancestry - Data Engineer ? Enterprise Data Management / DNA Operations</a></h5> 
+<h5><a href='https://jobs.lever.co/ancestry/7b248d7f-5f6c-4558-8368-18c14b2eebde'>Ancestry - Data Engineer ? Enterprise Data Management / DNA Operations</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -367,7 +367,7 @@ created Data Management Excellence Team. Within this multidisciplinary team?...<
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://definedcrowd.recruitee.com/o/data-engineer'>
+<h5><a href='https://definedcrowd.recruitee.com/o/data-engineer'>
       Data Engineer - DefinedCrowd
     </a></h5> 
 <p><span class="badge badge-light">Lisbon, Portugal</span></p>
@@ -437,7 +437,7 @@ with the role for which you're applying??. Please tell us why you selected such 
 <p><span class="badge badge-light">New York, NY</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://johnsoncontrols.referrals.selectminds.com/jobs/cmdb-data-engineer-78275'>CMDB Data Engineer - Johnson Controls Careers</a></h5> 
+<h5><a href='https://johnsoncontrols.referrals.selectminds.com/jobs/cmdb-data-engineer-78275'>CMDB Data Engineer - Johnson Controls Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>6 days ago ... The JCI Service Management team is seeking a Configuration Management Data 
 Engineer for managing the CMDB (Configuration Management Database)?...</p>
